--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@chooie/js_to_html": "1.0.6",
     "express": "4.16.3",
-    "procfile": "0.1.1"
+    "procfile": "0.1.1",
+    "require-from-string": "^2.0.2"
   }
 }
